--- a/frontend/job-seeker/dashboard.html
+++ b/frontend/job-seeker/dashboard.html
@@ -9,6 +9,7 @@
     <script src="../js/job-seeker.js" defer></script>
 </head>
 <body>
+    
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">   
         <div class="container">
             <a class="navbar-brand" href="#">Job Seeker</a>
@@ -22,6 +23,11 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="upload-resume.html">Upload Resume</a>
+                    </li>
+                    <li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/frontend/index.html">Logout</a>
+                        </li>
                     </li>
                  </ul>
             </div>
@@ -207,6 +213,8 @@
         alert('An error occurred while removing the application. Please try again.');
     }
 }
+
+
 
 
     
